--- a/index.html
+++ b/index.html
@@ -11,35 +11,36 @@
     <header>
         <h1>Calculadora de Jantar e Gorjeta</h1>
     </header>
-    <nav>
-        <a href="https://andrehenriquemeliunas.github.io/t026-portfolio-programador/" target="_blank">Saiba Mais</a>
-    </nav>
     <div id="container">
         <div id="calculator">
-            <p>Quanto custou o jantar?<p>
-            R$ <input id="total-conta" type="text" placeholder="Total da conta">
-            <p>Qual a taxa de serviço?<p>
-            <select id="taxa-servico">
-                <option disabled selected value="0">-- Defina a Taxa --</option>
-                <option value="0.3">30% - Taxa de serviço ótima</option>
-                <option value="0.2">20% - Taxa de serviço</option>
-                <option value="0.1">10% - Taxa de serviço boa</option>
-                <option value="0.05">5% - Taxa de serviço ruim</option>
-            </select>
-            <p>Quantas pessoas vão dividir a conta?</p>
-            <input id="numero-pessoas" type="text" placeholder="Número de pessoas"> pessoas
-            <button type="button" id="calcular">Calcular!</button>
+            <center>
+                <p>Quanto custou o jantar?<p>
+                <input id="total-conta" type="text" placeholder="Valor total da conta">
+                <p>Qual a taxa de serviço?<p>
+                <select id="taxa-servico">
+                    <option disabled selected value="0"> Defina a Taxa</option>
+                    <option value="0.3">30% - Taxa de serviço ótima</option>
+                    <option value="0.2">20% - Taxa de serviço</option>
+                    <option value="0.1">10% - Taxa de serviço boa</option>
+                    <option value="0.05">5% - Taxa de serviço ruim</option>
+                </select>
+                <p>Quantas pessoas vão dividir a conta?</p>
+                <input id="numero-pessoas" type="text" placeholder="Número de pessoas">
+                <button type="button" id="calcular">Calcular</button>
+            </center>
         </div>
         <!--Resultados-->
-        <div id="valor-calculado">
-            <sup>R$</sup><span id="valor-por-cabeca">0.00</span>
-            <small id="each">cada</small>
-        </div>
+        <center>
+            <div id="valor-calculado">
+                <span>O valor é <span><span id="valor-por-cabeca">0.00</span>
+                <span id="each">cada</span>
+            </div>
+        </center>
         <!--Resultados-->
     </div>
 
     <footer>
-        <p>&copy; Desenvoldio por <span>André Henrique</span> - 2022 </p>
+        <p>&copy; Desenvoldio por <span><a href="https://andrehenriquemeliunas.github.io/t026-portfolio-programador/">André Henrique</a></span> - 2022 </p>
     </footer>
     <script src="js/script.js"></script>
 </body>
