--- a/index.html
+++ b/index.html
@@ -19,26 +19,21 @@
                 <p>Qual a taxa de serviço?<p>
                 <select id="taxa-servico">
                     <option disabled selected value="0"> Defina a Taxa</option>
-                    <option value="0.3">30% - Taxa de serviço ótima</option>
-                    <option value="0.2">20% - Taxa de serviço</option>
-                    <option value="0.1">10% - Taxa de serviço boa</option>
-                    <option value="0.05">5% - Taxa de serviço ruim</option>
+                    <option value="0.3">30% - Atendimento Ótimo</option>
+                    <option value="0.2">20% - Atendimento Bom</option>
+                    <option value="0.1">10% - Atendimento Regular</option>
+                    <option value="0.05">5% - Atendimento Ruim</option>
                 </select>
                 <p>Quantas pessoas vão dividir a conta?</p>
                 <input id="numero-pessoas" type="text" placeholder="Número de pessoas">
+                <div id="valor-calculado">
+                    <span>O valor da conta é <strong>R$</strong><span><span id="valor-por-cabeca">0.00</span>
+                    <span id="each">pra cada pessoa.</span>
+                </div>
                 <button type="button" id="calcular">Calcular</button>
             </center>
         </div>
-        <!--Resultados-->
-        <center>
-            <div id="valor-calculado">
-                <span>O valor é <span><span id="valor-por-cabeca">0.00</span>
-                <span id="each">cada</span>
-            </div>
-        </center>
-        <!--Resultados-->
     </div>
-
     <footer>
         <p>&copy; Desenvoldio por <span><a href="https://andrehenriquemeliunas.github.io/t026-portfolio-programador/">André Henrique</a></span> - 2022 </p>
     </footer>
